option(
	'readline',
	type: 'combo',
	choices: ['auto', 'enabled', 'disabled'],
	value: 'auto',
	description: 'Enable improved interactive interface via readline',
)

option(
	'readline-provider',
	type: 'combo',
	choices: ['readline', 'editline'],
	value: 'readline',
	description: 'Provider of the readline library',
)
