option(
	'readline',
	type: 'feature',
	value: 'auto',
	description: 'Enable improved interactive interface via readline',
)

option(
	'readline-provider',
	type: 'combo',
	choices: ['readline', 'editline'],
	value: 'readline',
	description: 'Provider of the readline library',
)

option(
	'examples',
	type: 'boolean',
	value: true,
	description: 'Build example programs',
)
